--- a/composer.json
+++ b/composer.json
@@ -10,5 +10,10 @@
     "require": {
         "php": ">=5.5",
         "zendframework/zendframework": "~2.5"
+    },
+    "autoload": {
+        "psr-0": {
+            "Album": "module/Album/src"
+        }
     }
 }
