--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,8 @@
         "zendframework/zend-db": "^2.8",
         "zendframework/zend-form": "^2.9",
         "zendframework/zend-i18n": "^2.7",
-        "zendframework/zend-json": "^3.0"
+        "zendframework/zend-json": "^3.0",
+        "doctrine/doctrine-orm-module": "^1.1"
     },
     "autoload": {
         "psr-4": {
