--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,8 @@
         "zendframework/zend-i18n": "^2.7",
         "zendframework/zend-json": "^3.0",
         "doctrine/doctrine-orm-module": "^1.1",
-        "ext-intl": "^1.1"
+        "ext-intl": "^1.1",
+        "kokspflanze/zfc-twig": "^2.0"
     },
     "autoload": {
         "psr-4": {
